fix js references

--- a/src/templates/newtab.html
+++ b/src/templates/newtab.html
@@ -11,10 +11,10 @@
         font-family: 'Roboto', sans-serif;
         min-height: 100vh;
         min-width: 100vw;
-        background-color: limegreen;
+        background-color: white;
         padding: 0;
         margin: 0;
-        color: white;
+        color: #333;
         font-size: 75px;
         top: 0;
         position: absolute;
@@ -52,6 +52,6 @@
             </div>
         </div>
       </div>
-      <script src="newtab.js"></script>
+      <script src="../js/newtab.js"></script>
   </body>
 </html>
