--- a/src/templates/options.html
+++ b/src/templates/options.html
@@ -30,6 +30,6 @@ Write a Journal</textarea>
             <label for="random">Randomly Chosen</label>
         </div>
       </div>
-    <script src="options.js"></script>
+    <script src="../js/options.js"></script>
     </body>
   </html>
