--- a/src/templates/newtab.html
+++ b/src/templates/newtab.html
@@ -15,7 +15,7 @@
         padding: 0;
         margin: 0;
         color: #333;
-        font-size: 75px;
+        font-size: 4.6rem;
         top: 0;
         position: absolute;
     }
