formating on the options page

--- a/src/templates/options.html
+++ b/src/templates/options.html
@@ -13,10 +13,12 @@
             h1 {
                 font-family: 'Roboto', sans-serif;
                 font-size: 4rem;
+                text-align: center;
             }
             h2 {
                 font-family: 'Roboto', sans-serif;
                 font-size: 2.6rem;
+                text-align: center;
             }
             p {
                 font-size: 1rem;
@@ -72,8 +74,8 @@
     <body>
       <div id="container">
         <div id="headline">
-            <h1>Go Outside... Options</h1>
-            <h2>less screen, more green</h2>
+            <h1>Go&nbsp;Outside... Options</h1>
+            <h2>less&nbsp;screen, more&nbsp;green</h2>
         </div>
         <div>
             <p>Add new items below, each line is a new item</p>
