Update styling to keep one line in FF and reduce console errors in FF

--- a/src/templates/options.html
+++ b/src/templates/options.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <title>Go Outside... -Options-</title>
+        <meta charset="utf-8"/>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <style>
@@ -43,6 +44,7 @@
                 color: #333;
                 width: 39%;
                 text-align: center;
+                font-size: 0.9rem;
             }
             .radio:hover {
                 background-color: #666;
