--- a/src/templates/newtab.html
+++ b/src/templates/newtab.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Go Outside...</title>
+    <meta charset="utf-8"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -15,7 +16,7 @@
         padding: 0;
         margin: 0;
         color: #333;
-        font-size: 4.6rem;
+        font-size: 4.3rem;
         top: 0;
         position: absolute;
     }
